# dedream-machine

./: .gitignore  README.md  index.html  package-lock.json  package.json  test_scene.mjs  test_scene2.mjs  test_scene3.mjs  vitest.config.ts
.github/workflows/: build.yml
docs/: Architecture.md  DistributionGuide.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: VideoPlayer.test.tsx  frameUtils.test.ts  originalVideoPath.test.ts  projectPersistence.test.ts  projectStore.test.ts  setup.ts  subtitleParser.test.ts  timeFormat.test.ts
src/components/analysis/: TextBlocks.css  TextBlocks.tsx
src/components/assets/: AssetSelectModal.css  AssetSelectModal.tsx  AssetSidebar.css  AssetSidebar.tsx
src/components/layout/: MainLayout.css  MainLayout.tsx
src/components/segments/: SegmentList.css  SegmentList.tsx
src/components/timeline/: Timeline.css  Timeline.tsx
src/components/video/: SubtitleMenu.tsx  VideoPlayer.css  VideoPlayer.tsx
src/components/welcome/: WelcomeScreen.css  WelcomeScreen.tsx
src/hooks/: useThumbnailExtractor.ts
src/services/: ffmpegService.ts  subtitleParser.ts
src/stores/: projectStore.ts  timelineStore.ts  videoStore.ts
src/types/: index.ts
src/utils/: frameUtils.ts  originalVideoPath.ts  shortcuts.ts  timeFormat.ts
