[package]
name = "dedream-machine"
version = "0.1.0"
description = "拆梦机器 — A film analysis workstation"
authors = ["you"]
edition = "2021"

[lib]
name = "dedream_machine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tower = { version = "0.5.3", features = ["util"] }
urlencoding = "2.1.3"
zip = "8.2.0"
walkdir = "2.5.0"
